Fix #6627 "Button label can overflow grid cell"

--- a/form-runner/jvm/src/main/assets/xbl/orbeon/grid/grid.less
+++ b/form-runner/jvm/src/main/assets/xbl/orbeon/grid/grid.less
@@ -755,6 +755,7 @@
                         max-width: 100%;
                         word-wrap: break-word;
                         white-space: break-spaces;
+                        word-break: break-word;
                     }
                 }
             }
